trying to accomodate arduino IDE

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+src_dir = Tank
 
 [env:pro16MHzatmega328]
 platform = atmelavr
