--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ platform = atmelavr
 board = pro16MHzatmega328
 framework = arduino
 monitor_speed = 9600
+#monitor_speed = 115200
 lib_deps =
   # Using a library name
   Servo
