--- a/platformio.ini
+++ b/platformio.ini
@@ -7,8 +7,12 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+;
+;
+; Betacrawler: https://github.com/tropotek/betacrawler
+;
 [platformio]
-src_dir = Tank
+src_dir = betacrawler
 
 [env:pro16MHzatmega328]
 platform = atmelavr
