Updated project folder structure and .ini files

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,19 +7,27 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-;
-;
-; Betacrawler: https://github.com/tropotek/betacrawler
-;
-[platformio]
-src_dir = betacrawler
 
-[env:pro16MHzatmega328]
-platform = atmelavr
-board = pro16MHzatmega328
-framework = arduino
-;[2400, 9600, 19200, 38400, 57600, 115200, 250000, 500000, 1000000]
-monitor_speed = 115200
-lib_deps =
-  Servo
+
+[platformio]
+;src_dir      = src
+;include_dir  = src
+default_envs  = genericSTM32F411CE
+extra_configs =
+    ;ini/avr.ini
+    ini/stm32f4.ini
+
+
+#
+# By default build will abort after 5 errors.
+# Remove '-fmax-errors=5' from build_flags below to see all.
+#
+[common]
+build_flags   = -fmax-errors=5
+
+
+
+[env]
+framework     = arduino
+
 
