--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@
 ;include_dir  = src
 default_envs  = genericSTM32F411CE
 extra_configs =
-    ;ini/avr.ini
+    ini/avr.ini
     ini/stm32f4.ini
 
 
