Added AVR support to the project files

--- a/ini/stm32f4.ini
+++ b/ini/stm32f4.ini
@@ -26,8 +26,11 @@ board = genericSTM32F411CE
 ;framework = arduino
 upload_protocol = dfu
 build_flags = 
+	${common.build_flags}
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
+	-D BC_STM32F4
+	-D BC_CMD		; Enable the USB serial CLI interface
 monitor_dtr = 1
 monitor_speed = 115200
 lib_ignore = 
