--- a/platformio.ini
+++ b/platformio.ini
@@ -12,11 +12,11 @@
 [platformio]
 ;src_dir      = src
 ;include_dir  = src
-default_envs  = genericSTM32F411CE
+default_envs  = pro16MHzatmega328
+;default_envs  = genericSTM32F411CE
 extra_configs =
     ini/avr.ini
     ini/stm32f4.ini
-
 
 #
 # By default build will abort after 5 errors.
@@ -24,8 +24,6 @@ extra_configs =
 #
 [common]
 build_flags   = -fmax-errors=5
-
-
 
 [env]
 framework     = arduino
