--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,8 @@
 
 
 [platformio]
-;src_dir      = src
-;include_dir  = src
-default_envs  = pro16MHzatmega328
-;default_envs  = genericSTM32F411CE
+;default_envs  = pro16MHzatmega328
+default_envs  = genericSTM32F411CE
 extra_configs =
     ini/avr.ini
     ini/stm32f4.ini
