added more blackpill boards to the ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,18 +12,24 @@
 [platformio]
 ;default_envs  = pro16MHzatmega328
 default_envs  = genericSTM32F411CE
+;default_envs  = genericSTM32F401CE
+;default_envs  = blackpill_f411ce
+;default_envs  = blackpill_f401cc
 extra_configs =
     ini/avr.ini
-    ini/stm32f4.ini
+    ini/stm32.ini
 
 #
 # By default build will abort after 5 errors.
 # Remove '-fmax-errors=5' from build_flags below to see all.
 #
 [common]
-build_flags   = -fmax-errors=5
+build_flags   = -fmax-errors=5 -w
 
 [env]
 framework     = arduino
+monitor_speed = 115200
+lib_deps = 
+	rb-enantel/RC_ESC@^1.1.0
 
 
