Serial USB now broken

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 [platformio]
 ;default_envs  = pro16MHzatmega328
 default_envs  = genericSTM32F411CE
-;default_envs  = genericSTM32F401CE
 ;default_envs  = blackpill_f411ce
+;default_envs  = genericSTM32F401CE
 ;default_envs  = blackpill_f401cc
 extra_configs =
     ini/avr.ini
@@ -24,7 +24,7 @@ extra_configs =
 # Remove '-fmax-errors=5' from build_flags below to see all.
 #
 [common]
-build_flags   = -fmax-errors=5 -w
+build_flags   = -fmax-errors=5 
 
 [env]
 framework     = arduino
