--- a/ini/avr.ini
+++ b/ini/avr.ini
@@ -13,6 +13,7 @@
 [env:pro16MHzatmega328]
 platform = atmelavr
 board = pro16MHzatmega328
+monitor_speed = ${common.monitor_speed}
 build_flags = 
 	${common.build_flags}
 	-D BC_AVR
