--- a/ini/stm32.ini
+++ b/ini/stm32.ini
@@ -23,30 +23,28 @@
 [env:genericSTM32F411CE]
 platform = ststm32
 board = genericSTM32F411CE
-
 upload_protocol = dfu
+monitor_dtr = 1
 build_flags = 
 	${common.build_flags}
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
 	-D BC_STM32F4
 	-D BC_CLI		; Enable the USB serial CLI interface
-monitor_dtr = 1
 lib_ignore = 
 	SD
 
 [env:blackpill_f411ce]
 platform = ststm32
 board = blackpill_f411ce
-
 upload_protocol = dfu
+monitor_dtr = 1
 build_flags = 
 	${common.build_flags}
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
 	-D BC_STM32F4
 	-D BC_CLI		; Enable the USB serial CLI interface
-monitor_dtr = 1
 lib_ignore = 
 	SD
 
@@ -54,32 +52,54 @@ lib_ignore =
 [env:genericSTM32F401CE]
 platform = ststm32
 board = genericSTM32F401CE
-
 upload_protocol = dfu
+monitor_dtr = 1
 build_flags = 
 	${common.build_flags}
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
 	-D BC_STM32F4
 	-D BC_CLI		; Enable the USB serial CLI interface
-monitor_dtr = 1
 lib_ignore = 
 	SD
-
 
 [env:blackpill_f401cc]
 platform = ststm32
 board = blackpill_f401cc
-
 upload_protocol = dfu
+monitor_dtr = 1
 build_flags = 
 	${common.build_flags}
 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
 	-D USBCON
 	-D BC_STM32F4
 	-D BC_CLI		; Enable the USB serial CLI interface
-monitor_dtr = 1
 lib_ignore = 
 	SD
+
+
+
+
+
+
+; [env:genericSTM32F411CE]
+; platform = ststm32
+; board = genericSTM32F411CE
+; ;framework = arduino
+; upload_protocol = dfu
+; build_flags = 
+; 	${common.build_flags}
+; 	-D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
+; 	-D USBCON
+; 	-D BC_STM32F4
+; 	-D BC_CMD		; Enable the USB serial CLI interface
+; monitor_dtr = 1
+; monitor_speed = 115200
+; lib_ignore = 
+; 	SD
+; lib_deps = 
+; 	rb-enantel/RC_ESC@^1.1.0
+
+
 
 
