--- a/ini/avr.ini
+++ b/ini/avr.ini
@@ -13,10 +13,10 @@
 [env:pro16MHzatmega328]
 platform = atmelavr
 board = pro16MHzatmega328
-monitor_speed = ${common.monitor_speed}
 build_flags = 
 	${common.build_flags}
 	-D BC_AVR
+	-D BC_CLI		; This is buggy with arduino using interrupts for the PPM receiver
 
 
 
