--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,8 @@
 
 [platformio]
 ;default_envs  = pro16MHzatmega328
-;default_envs  = blackpill_f411ce
-default_envs  = blackpill_f401cc
+default_envs  = blackpill_f411ce
+;default_envs  = blackpill_f401cc
 ;default_envs  = genericSTM32F411CE
 ;default_envs  = genericSTM32F401CE
 extra_configs =
